--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   web:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     container_name: web
     restart: always
     volumes:
@@ -21,4 +21,4 @@ services:
       - ./data:/data/db
     ports:
       - "27017:27017"
-    env_file: ./.env.production
+    env_file: ./.env.development
